date picker css modified

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -95,7 +95,7 @@
     </div>
     <div class="main col-md-9 pull-right">
         <input id="datePickerMCM" dt="{{ContentMedia.item.data.mediaDate}}" type="date" class="form-control"
-               ng-model="ContentMedia.item.data.mediaDate"/>
+               ng-model="ContentMedia.item.data.mediaDate" readonly='true'/>
     </div>
 </div>
 <hr class="none">
