--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -23,7 +23,8 @@
         <div class="media-holder margin-top-fifteen">
             <div class="media-inner text-center">
                 <img ng-if="NowPlaying.currentTrack.image" class="border-radius-two" load-image="1x1"
-                     data-final-src="{{NowPlaying.currentTrack.image | cropImage: 260 :260 }}" height="260px" width="260">
+                     crop-width="260" crop-height="260" crop-type="crop"
+                     data-final-src="{{NowPlaying.currentTrack.image}}" height="260px" width="260">
                 <img ng-if="!NowPlaying.currentTrack.image" class="border-radius-two"
                      src="http://app.buildfire.com/app/media/now-playing.png" height="260px" width="260">
             </div>
@@ -96,7 +97,7 @@
                          ng-repeat="track in NowPlaying.playList">
                         <div class="list-item-media text-left" ng-class="{'edit' : track.swiped}">
                             <div class="list-media-holder square-icon pull-left">
-                                <img ng-if="track.image" load-image="16x9" data-final-src="{{track.image | cropImage : 55 :22}}">
+                                <img ng-if="track.image" load-image="16x9" crop-width="55" crop-height="22" crop-type="crop" data-final-src="{{track.image}}">
                             </div>
                             <div class="list-item-copy text-left padding-left-ten padding-right-ten">
                                 <p class="margin-bottom-zero ellipsis margin-top-twenty bodyTextTheme">{{track.title}}</p>
@@ -131,7 +132,8 @@
                         <img ng-if="!NowPlaying.currentTrack.image" class="border-radius-two"
                              src="http://app.buildfire.com/app/media/now-playing.png">
                         <img ng-if="NowPlaying.currentTrack.image" class="border-radius-two"
-                             ng-src="{{NowPlaying.currentTrack.image | cropImage :140:140}}">
+                             load-image="1x1" crop-width="140" crop-height="140" crop-type="crop"
+                             ng-src="{{NowPlaying.currentTrack.image}}">
                     </div>
                 </div>
                 <hr class="none">
