--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -17,7 +17,8 @@
                             <div class="list-media-holder text-overlay"
                                  play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1"
-                                     data-final-src="{{WidgetHome.items[$index].data.topImage | cropImage:200:200}}">
+                                     crop-width="200" crop-height="200" crop-type="crop"
+                                     data-final-src="{{WidgetHome.items[$index].data.topImage}}">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
                                      src="../../../styles/media/holder-1x1.png">
                             </div>
@@ -36,7 +37,8 @@
                             <div class="list-media-holder text-overlay"
                                  play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
-                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage | cropImage:200:200}}">
+                                     crop-width="200" crop-height="200" crop-type="crop"
+                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage}}">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
                                      src="../../../styles/media/holder-1x1.png">
                             </div>
