--- a/widget/templates/modals/playlist.html
+++ b/widget/templates/modals/playlist.html
@@ -9,7 +9,8 @@
                     <div class="list-item ">
                         <div class="list-item-media now-playing text-left">
                             <div class="list-media-holder square-icon pull-left">
-                                <img if="PlaylistModal.info.data.image" load-image="1x1" data-final-src="{{PlaylistModal.info.data.image | resizeImage :30 :30}}">
+                                <img if="PlaylistModal.info.data.image" load-image="1x1"
+                                     crop-width="30" crop-height="30" crop-type="resize" data-final-src="{{PlaylistModal.info.data.image}}">
                             </div>
                             <div class="list-item-copy text-left padding-left-ten padding-right-ten">
                                 <p class="margin-bottom-zero ellipsis margin-top-fifteen">{{PlaylistModal.info.data.audioTitle}}</p>
