date readonly attribute removed

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -115,7 +115,7 @@
     </div>
     <div class="main col-md-9 pull-right">
         <input id="datePickerMCM" dt="{{ContentMedia.item.data.mediaDate}}" type="date" class="form-control"
-               ng-model="ContentMedia.item.data.mediaDate" readonly='true'/>
+               ng-model="ContentMedia.item.data.mediaDate"/>
     </div>
 </div>
 <hr class="none">
