--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -97,7 +97,7 @@
 .holder.now-playing .media-holder .media-inner,
 .more-info .media-holder .media-inner{
 	max-width:240px;
-	max-height:240px;	
+	max-height:240px;
 	display:table-cell;
 	vertical-align:middle;
 }
@@ -334,13 +334,13 @@
 }
 
 .audio-plyer input[type=range]::-webkit-slider-thumb {
-    height: 9px;
-    width: 9px;
+    height: 16px;
+    width: 16px;
     background: #ffffff;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -2.7px;
-    border-radius: 4.5px;
+    margin-top: -7px;
+    border-radius: 100%;
 }
 
 .audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
@@ -697,7 +697,7 @@ html[browser="Firefox"] .layout3 .list-layout .list-item-media .list-media-holde
 	position:absolute;
 	width:30px;
 	height:26px;
-	color:#fff;	
+	color:#fff;
 	font-size:30px;
 	line-height:24px;
 	top:50%;
@@ -762,3 +762,26 @@ html[browser="Firefox"] .layout3 .list-layout .list-item-media .list-media-holde
     margin-top: -25px !important;
     opacity: 0.6 !important;
 }
+input[type=range] {
++  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
++  width: 100%; /* Specific width is required for Firefox. */
++  background: transparent; /* Otherwise white in Chrome */
++}
++
++input[type=range]::-webkit-slider-thumb {
++  -webkit-appearance: none;
++}
++
++input[type=range]:focus {
++  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
++}
++
++input[type=range]::-ms-track {
++  width: 100%;
++  cursor: pointer;
++
++  /* Hides the slider so custom styles can be added */
++  background: transparent;
++  border-color: transparent;
++  color: transparent;
++}
