--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -15,8 +15,8 @@
             <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items"
                  ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
-                    <div class="text-overlay" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0}}">
-                        <img load-image="16x9" crop-width="340" crop-height="190" crop-type="crop" data-final-src="{{item.data.topImage}}">
+                    <div class="text-overlay" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0 || (WidgetHome.media.data.design.skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}">
+                        <img load-image="16x9" style="width:100%;" crop-width="340" crop-height="190" crop-type="crop" data-final-src="{{item.data.topImage}}">
                     </div>
                 </div>
                 <div class="padded text-left text-overlay">
