--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -15,7 +15,7 @@
                     <div class="list-item-odd col-xs-6 pull-left clickable " ng-click="WidgetHome.goToMedia($index)">
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="list-media-holder text-overlay"
-                                 play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0}}">
+                                 play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0  || (WidgetHome.media.data.design.skipMediaPage && (WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0)) }}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1"
                                      crop-width="200" crop-height="200" crop-type="crop"
                                      data-final-src="{{WidgetHome.items[$index].data.topImage}}">
@@ -35,7 +35,7 @@
                          ng-if="WidgetHome.items[$index + 1]">
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="list-media-holder text-overlay"
-                                 play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0}}">
+                                 play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0  || (WidgetHome.media.data.design.skipMediaPage && (WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0)) }}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
                                      crop-width="200" crop-height="200" crop-type="crop"
                                      data-final-src="{{WidgetHome.items[$index + 1].data.topImage}}">
