--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1,4 +1,14 @@
 /* Plugin CSS */
+.noSlide{
+	position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+	overflow-x:hidden;
+	overflow-y:auto;
+	-webkit-overflow-scrolling:touch;	
+    background-color:#fff;
+}
 .media-center-plugin.layout2 .people-banner .people-bg{
 	background:rgba(0,0,0,0.8);
 }
