--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -2,16 +2,16 @@
     <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix">
             <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
-                  style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
-                 class="plugin-slider text-center">
+                style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
+                class="plugin-slider text-center">
                 <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
-                     style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
-                     class="plugin-slide">
+                    style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;" class="plugin-slide">
                     <!--ng-style="WidgetMedia.showVideo == false ? {'min-height': '192px'} : {}" style="width: 100% !important;max-height:192px !important"
                          -->
-                    <img  data-ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage || ( WidgetMedia.media.data.design.skipMediaPage && WidgetMedia.item.data.videoUrl )" load-image="16x9" style="min-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
-                         crop-width="1280" crop-height="720" crop-type="crop"
-                         data-final-src="{{WidgetMedia.item.data.topImage}}"/>
+                    <img data-ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage || ( WidgetMedia.media.data.design.skipMediaPage && WidgetMedia.item.data.videoUrl )"
+                        load-image="16x9" style="min-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
+                        crop-width="1280" crop-height="720" crop-type="crop"
+                        data-final-src="{{WidgetMedia.item.data.topImage}}" />
 
                     <div ng-include="'templates/layouts/video-player.html'"></div>
                 </div>
@@ -22,20 +22,45 @@
             <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
         </div>
         <div class="padded padding-top-zero">
-            <hr class="small"
-                ng-if="WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl || WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.links.length">
+            <!-- <hr class="small"
+                ng-if="WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl || WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.links.length"> -->
             <div class="link-list" data-ng-hide="WidgetMedia.media.data.design.skipMediaPage">
-                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
-                   href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
+                <!-- <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
+                    href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl"
-                   ng-click="WidgetMedia.toggleShowVideo();">Watch</a>
-                <!--<a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}"
-                   target="_blank">View Source</a>-->
-                <a id="sourceToggleButton" class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" ng-click="WidgetMedia.showSourceIframe()">View Source</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.links.length" ng-click="WidgetMedia.openLinks(WidgetMedia.item.data.links)">More Options</a>
+                    ng-click="WidgetMedia.toggleShowVideo();">Watch</a>
+            <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}"
+                   target="_blank">View Source</a>
+                <a id="sourceToggleButton" class="text-primary" ng-if="WidgetMedia.item.data.srcUrl"
+                    ng-click="WidgetMedia.showSourceIframe()">View Source</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.links.length"
+                    ng-click="WidgetMedia.openLinks(WidgetMedia.item.data.links)">More Options</a> -->
 
             </div>
-            <hr class="small" ng-if="WidgetMedia.item.data.body">
+            <div class="item-actions">
+                <div class="link-list">
+                    <a class="media-action" href="#/nowplaying/{{WidgetMedia.item.id}}" ng-if="WidgetMedia.mediaType == 'AUDIO'">
+                        <i class="btn btn-success share glyphicon glyphicon-volume-up"></i>
+                    </a>
+                    <a class="media-action video" ng-click="WidgetMedia.toggleShowVideo();"
+                        ng-if="WidgetMedia.mediaType == 'VIDEO'">
+                        <i class="btn btn-success share glyphicon glyphicon-play"></i>
+                    </a>
+                    <a ng-if="WidgetMedia.item.srcUrl" ng-click="WidgetMedia.openLink(WidgetMedia.item.srcUrl)"
+                        target="_blank">
+                        <i class="glyphicon glyphicon-screenshot"></i>
+                    </a>
+                </div>
+                <div class="li-actions">
+                    <i class="share glyphicon glyphicon glyphicon-edit" ng-click="WidgetMedia.addNote()" ng-click=""
+                        role="button"></i>
+                    <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetMedia.share()" role="button"></i>
+                    <i class="glyphicon icon bookmark" style="font-family: 'Glyphicons Halflings' !important;"
+                        ng-class="{ 'glyphicon-star-empty' : !WidgetMedia.item.data.bookmarked, 'glyphicon-star' : WidgetMedia.item.data.bookmarked }"
+                        ng-click="WidgetMedia.bookmark($event)" role="button"></i>
+                </div>
+            </div>
+            <!-- <hr class="small" ng-if="WidgetMedia.item.data.body"> -->
             <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
 
 
