--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -151,6 +151,9 @@
                     </div>
                     <div class="more-info-list padded">
                         <div class="text-center item">
+                            <a ng-click="NowPlaying.addNote()" class="whiteTheme">Add Note</a>
+                        </div>
+                        <div class="text-center item">
                             <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">Go to Playlist</a>
                         </div>
                         <div class="text-center item">
