--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -25,6 +25,13 @@
                     </p>
                     <p class="margin-bottom-zero" style="font-size:13px;">{{item.data.summary}}</p>
                     <span class="list-item-date" data-ng-if="item.data.mediaDate" style="font-size:11px; font-style:italic; margin-top:-4px;">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
+                    <div class="action">
+                        <div class="li-actions-item">
+                            <i class="share glyphicon glyphicon-share-alt star" ng-click="WidgetHome.share($event, item)" role="button"></i>
+                            <i class="glyphicon bookmark star" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked }" ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
