--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -22,24 +22,9 @@
             <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
         </div>
         <div class="padded padding-top-zero">
-            <!-- <hr class="small"
-                ng-if="WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl || WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.links.length"> -->
-            <div class="link-list" data-ng-hide="WidgetMedia.media.data.design.skipMediaPage">
-                <!-- <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
-                    href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl"
-                    ng-click="WidgetMedia.toggleShowVideo();">Watch</a>
-            <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}"
-                   target="_blank">View Source</a>
-                <a id="sourceToggleButton" class="text-primary" ng-if="WidgetMedia.item.data.srcUrl"
-                    ng-click="WidgetMedia.showSourceIframe()">View Source</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.links.length"
-                    ng-click="WidgetMedia.openLinks(WidgetMedia.item.data.links)">More Options</a> -->
-
-            </div>
             <div class="item-actions">
                 <div class="link-list">
-                    <a class="media-action" href="#/nowplaying/{{WidgetMedia.item.id}}" ng-if="WidgetMedia.mediaType == 'AUDIO'">
+                    <a class="media-action" ng-click="WidgetMedia.playAudio();" ng-if="WidgetMedia.mediaType == 'AUDIO'">
                         <i class="btn btn-success share glyphicon glyphicon-volume-up"></i>
                     </a>
                     <a class="media-action video" ng-click="WidgetMedia.toggleShowVideo();"
@@ -54,7 +39,7 @@
                 <div class="li-actions">
                     <i class="share glyphicon glyphicon glyphicon-edit" ng-click="WidgetMedia.addNote()" ng-click=""
                         role="button"></i>
-                    <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetMedia.share()" role="button"></i>
+                    <i class="share glyphicon glyphicon-share-alt" ng-click="WidgetMedia.share($event)" role="button"></i>
                     <i class="glyphicon icon bookmark" style="font-family: 'Glyphicons Halflings' !important;"
                         ng-class="{ 'glyphicon-star-empty' : !WidgetMedia.item.data.bookmarked, 'glyphicon-star' : WidgetMedia.item.data.bookmarked }"
                         ng-click="WidgetMedia.bookmark($event)" role="button"></i>
